feat: self-destruct
